[package]
name = "catnip"
version = "0.2.0"
edition = "2021"
description = "Minimal UDP/IP ethernet stack for data acquisition on private networks"
homepage = "https://github.com/jlogan03/catnip"
repository = "https://github.com/jlogan03/catnip"
readme = "./README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# byte_struct = "0.7.1"
byte_struct = { path = "../byte-struct-rs/byte_struct" }
modular-bitfield = "0.11.2"
static_assertions = "1.1.0"
panic-never = { version = "0.1.0", optional = true }
crc32fast = { version = "1.3.2", default-features = false, optional = true }

[features]
default = []
crc = ["crc32fast"]
panic_never = ["panic-never"]
