[package]
name = "catnip"
version = "0.1.3"
edition = "2021"
description = "Minimal UDP/IP ethernet stack for use on private networks for data acquisition"
homepage = "https://github.com/jlogan03/catnip"
repository = "https://github.com/jlogan03/catnip"
readme = "../README.md"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-never = "0.1.0"
crc32fast = { version = "1.3.2", default-features = false, optional = true }

[features]
default = ["crc"]
crc = ["crc32fast"]