[package]
name = "test_no_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catnip = {path="../../", features=["panic_never"]}

[profile.dev]
panic = "abort"
opt-level = "s"
lto = true       # Use full link-time optimization to reduce file size and eliminate panic branches
debug = true     # Include debugging flags
debug-assertions = true
overflow-checks = true

[profile.release]
panic = "abort"
opt-level = "s"  # Compiler optimization for minimum file size
lto = true       # Use full link-time optimization to reduce file size and eliminate panic branches
debug = false
debug-assertions = false
overflow-checks = false
